--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
     "expo-location": "~12.1.2",
-    "expo-permissions": "~12.1.1"
+    "expo-permissions": "~12.1.1",
+    "firebase": "8.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
