--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "expo": "~42.0.1",
+    "expo-location": "~12.1.2",
+    "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -24,10 +27,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "^0.17.1",
-    "expo-location": "~12.1.2",
-    "expo-permissions": "~12.1.1",
-    "firebase": "8.2.3"
+    "react-native-web": "^0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
