Add scheme to app.json to fix linking issue
Fixes error that occurs when logging in.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "koha",
+    "scheme": "koha",
     "slug": "koha",
     "version": "1.0.0",
     "orientation": "portrait",
