--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
+    "web": "expo start:web --https",
     "eject": "expo eject"
   },
   "dependencies": {
