--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start:web --https",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
@@ -26,6 +27,7 @@
     "react-dom": "16.13.1",
     "react-google-maps": "^9.4.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-animation-library": "0.0.8",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.28.0",
     "react-native-paper": "^4.9.2",
@@ -38,7 +40,22 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@expo/webpack-config": "^0.14.0"
+    "@expo/webpack-config": "^0.14.0",
+    "jest": "^26.5.0",
+    "jest-expo": "^42.1.0",
+    "jest-fetch-mock": "^3.0.3",
+    "react-native-testing-library": "^6.0.0",
+    "react-test-renderer": "^16.14.0"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ],
+    "automock": true,
+    "setupFilesAfterEnv": [
+      "./jest.setup.js"
+    ]
+  }
 }
