Implement new changes to the listing UI

--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "^3.3.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animation-library": "0.0.8",
     "react-native-dropdown-picker": "^5.1.25",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-google-maps-places-autocomplete": "^1.0.2",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.28.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
