Updates to issues occurring in web version
Fixed incompatible date picker for listing and signup.
Removed weirdly formatted arrows from dropdown boxes when on web version.
Switched saved date from specific timestamp to date in format "DD/MM/YYYY"
Removed ability to type non-number characters in the quantity section.
Removed extra space at the start of placeholder text.
Fixed date output to match for both web & native platforms.
Added required CSS formatting to the index.html page for web platform

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-web-browser": "^9.2.0",
     "firebase": "8.2.3",
     "react": "16.13.1",
+    "react-datepicker": "^3.8.0",
     "react-dom": "16.13.1",
     "react-google-maps": "^9.4.5",
     "react-google-places-autocomplete": "^3.3.2",
