--- a/app.json
+++ b/app.json
@@ -1,33 +1,33 @@
 {
-  "expo": {
-    "name": "koha",
-    "scheme": "koha",
-    "slug": "koha",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./app/assets/icon.png",
-    "splash": {
-      "image": "./app/assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./app/assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./app/assets/favicon.png"
-    }
-  }
+	"expo": {
+		"name": "koha",
+		"scheme": "koha",
+		"slug": "koha",
+		"version": "1.0.0",
+		"orientation": "portrait",
+		"icon": "./app/assets/icon.png",
+		"updates": {
+			"fallbackToCacheTimeout": 0
+		},
+		"assetBundlePatterns": ["**/*"],
+		"ios": {
+			"supportsTablet": true
+		},
+		"android": {
+			"package": "com.communitykoha.koha",
+			"versionCode": 1,
+			"adaptiveIcon": {
+				"foregroundImage": "./app/assets/adaptive-icon.png",
+				"backgroundColor": "#F6F1F0"
+			},
+			"config": {
+				"googleMaps": {
+					"apiKey": "AIzaSyDF5d4N_uYuhXc1LsKJzmlRyJ5pem9Nf6g"
+				}
+			}
+		},
+		"web": {
+			"favicon": "./app/assets/favicon.png"
+		}
+	}
 }
