--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
     "react-native-web-maps": "^0.3.0",
-    "expo-constants": "~11.0.1"
+    "expo-constants": "~11.0.1",
+    "expo-image-picker": "~10.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
