--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
     "expo-auth-session": "^3.3.1",
+    "expo-constants": "~11.0.1",
+    "expo-image-picker": "~10.2.2",
     "expo-location": "~12.1.2",
+    "expo-notifications": "^0.12.3",
     "expo-permissions": "~12.1.1",
     "expo-random": "^11.2.0",
     "expo-status-bar": "~1.0.4",
@@ -44,9 +47,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.1",
-    "react-native-web-maps": "^0.3.0",
-    "expo-constants": "~11.0.1",
-    "expo-image-picker": "~10.2.2"
+    "react-native-web-maps": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
