--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-auth-session": "^3.3.1",
     "expo-constants": "~11.0.1",
     "expo-font": "^9.2.1",
