--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
 	"expo": {
-		"name": "koha",
+		"name": "Community Koha",
 		"scheme": "koha",
 		"slug": "koha",
-		"version": "1.0.0",
+		"version": "2.0.0",
 		"orientation": "portrait",
 		"icon": "./app/assets/icon.png",
 		"updates": {
